--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -33,8 +33,8 @@ jobs:
             emacs $org --no-init-file --no-site-file --kill --batch \
               --load ox \
               --load ox-md \
-              --eval "(advice-add 'org-md-template :around \#'(lambda (orig-fun &rest args) (let* ((res (apply orig-fun args)) (title (org-element-interpret-data (plist-get (nth 1 args) :title)))) (concat \"# \" title \"\n\n\" res))))"
-              --eval "(setq org-export-allow-bind-keywords t)"
+              --eval "(advice-add 'org-md-template :around #'(lambda (orig-fun &rest args) (let* ((res (apply orig-fun args)) (title (org-element-interpret-data (plist-get (nth 1 args) :title)))) (concat \"# \" title \"\n\n\" res))))" \
+              --eval "(setq org-export-allow-bind-keywords t)" \
               --funcall org-md-export-to-markdown
           done
       - name: Auto commit
