ci: update path filter of README
Signed-off-by: Burgess Chang <bsc@brsvh.org>

--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -19,7 +19,7 @@ jobs:
           list-files: shell
           filters: |
             org:
-              - 'README.org'
+              - 'docs/README.org'
       - name: Emacs setup
         if: steps.changes.outputs.org == 'true'
         uses: purcell/setup-emacs@master
