--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,13 +2,13 @@ repository:
   name: nixing
   description: A place to collect things about Nix, it is also where to keep my dotfiles.
   homepage: https://brsvh.org/nixing
-  topics: dotfiles, nix, flake
-  private: true
+  topics: dotfiles, home-manager, nixos-configuration
+  private: false
 
   has_issues: true
   has_projects: true
-  has_wiki: true
-  has_downloads: true
+  has_wiki: false
+  has_downloads: false
 
   default_branch: main
 
