--- a/.github/workflows/gendocs.yaml
+++ b/.github/workflows/gendocs.yaml
@@ -37,7 +37,8 @@ jobs:
       - name: Checkout docs changes
         id: changed-files
         uses: tj-actions/changed-files@v42
-        files: 'org/**.org'
+        with:
+          files: 'org/**.org'
 
       - name: Generate Markdown
         if: steps.changed-files.outputs.any_changed == 'true'
