--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ on:
   push:
     paths-ignore:
       - ".github/**/**"
+      - "docs/**/**"
   pull_request:
   workflow_call:
   workflow_dispatch:
