feat: Add automatic generation of project-side configuration files
- conform
- editorconfig
- lefthook
- treefmt

Signed-off-by: Burgess Chang <bsc@brsvh.org>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 
 # std: ignore .cache directory
 /.cache/
+
+# nixago: ignore-linked-files
+/.conform.yaml
+/.editorconfig
+/lefthook.yml
+/treefmt.toml
