--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # .gitignore --- Git untracked files -*- mode: gitignore; -*-
 
+# nix: ignore build result
+/result
+/result-*
+
 # std: ignore .cache directory
 /.cache/
 
