ci: allow actions/configure-pages enable pages services
Signed-off-by: Burgess Chang <bsc@brsvh.org>

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Setup pages
         uses: actions/configure-pages@v4
+        with:
+          enablement: 'true'
 
       - name: Build doc
         run: |
