chore: change the homepage url
Signed-off-by: Burgess Chang <bsc@brsvh.org>

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,7 +1,7 @@
 repository:
   name: nixing
   description: A place to collect things about Nix, it is also where to keep my dotfiles.
-  homepage: https://brsvh.org/nixing
+  homepage: https://brsvh.github.io/nixing/
   topics: dotfiles, home-manager, nixos-configuration, nix-flake, nixos-flake, fonts, chinese-fonts
   private: false
 
